--- a/package.json
+++ b/package.json
@@ -13,20 +13,22 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.34",
     "@types/react-dom": "18.0.11",
-    "axios": "1.3.5",
+    "axios": "1.8.2",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
-    "next": "13.3.0",
+    "next": "15.2.3",
     "nprogress": "0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "5.3.9",
+    "styled-components": "^6.1.16",
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@babel/runtime": "7.24.0",
     "@types/nprogress": "0.2.0",
     "@types/styled-components": "5.1.26",
     "babel-plugin-styled-components": "2.1.1",
-    "prettier": "2.8.7"
+    "prettier": "2.8.7",
+    "regenerator-runtime": "0.14.0"
   }
 }
